crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_ambiguous_binop.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "import First exposing ((++))\nimport Second exposing ((++))\nvalue = [] ++ []"
---
nash::names::ambiguous_binop

  × Ambiguous operator `++`.
   ╭─[Main.nash:3:12]
 2 │ import Second exposing ((++))
 3 │ value = [] ++ []
   ·            ──
   ╰────
  help:     First.++
            Second.++

        Use a qualified name.
