crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_ambiguous_ctor.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "import First exposing (First(..))\nimport Second exposing (Second(..))\nvalue = Name"
---
nash::names::ambiguous_ctor

  × Ambiguous variant `Name`.
   ╭─[Main.nash:3:9]
 2 │ import Second exposing (Second(..))
 3 │ value = Name
   ·         ────
   ╰────
  help:     First.Name
            Second.Name

        Use a qualified name.
