crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_ambiguous_trait.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "import First exposing (Name)\nimport Second exposing (Name)\nvalue : (Name 'a) => 'a -> 'a\nvalue x = x"
---
nash::names::ambiguous_trait

  × Ambiguous trait `Name`.
   ╭─[Main.nash:3:10]
 2 │ import Second exposing (Name)
 3 │ value : (Name 'a) => 'a -> 'a
   ·          ────
 4 │ value x = x
   ╰────
  help:     First.Name
            Second.Name

        Use a qualified name.
