crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_ambiguous_type.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
nash::names::ambiguous_type

  × Ambiguous type `name`.
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help:     First.name
            Second.name

        Use a qualified name.
