crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_ambiguous_var.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "import First exposing (name)\nimport Second exposing (name)\nvalue = name"
---
nash::names::ambiguous_var

  × Ambiguous variable `name`.
   ╭─[Main.nash:3:9]
 2 │ import Second exposing (name)
 3 │ value = name
   ·         ────
   ╰────
  help:     First.name
            Second.name

        Use a qualified name.
