crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_annotation_too_short.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
nash::names::annotation_too_short

  × Annotation for `name` expects 1 argument; definition has 3 arguments.
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: Match the annotation to the definition's arguments.
