crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_bad_arity.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
TOO MANY TYPE ARGS

  × The `Box` type needs 1 argument, but I see 2 instead:
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: Which is the extra one? Maybe some parentheses are missing?
