crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_bad_instance_head.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "impl Equal 'a where\n    equal x y = True"
---
nash::names::bad_instance_head

  × This impl head is a bare type variable:
   ╭─[Main.nash:1:12]
 1 │ impl Equal 'a where
   ·            ──
 2 │     equal x y = True
   ╰────
  help: A bare-variable impl must be defined in the module that defines its trait.
