crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_binop_conflict.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
nash::names::binop_conflict

  × You cannot mix (a) and (a) without parentheses.
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: Add parentheses to specify the grouping.
