crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_binop_function_not_found.snap
---
source: crates/nash-report/src/canonicalize.rs
description: infix left 5 (+) = add
---
nash::names::binop_function_not_found

  × Operator `(+)` refers to undefined function `add`.
   ╭─[Main.nash:1:20]
 1 │ infix left 5 (+) = add
   ·                    ───
   ╰────
  help: Define it, or point the `infix` declaration at an existing top-level value.
