crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_context_var_not_in_type.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "value : (Equal 'name) => Int\nvalue = 1"
---
nash::names::context_var_not_in_type

  × The context mentions 'name, but this variable does not occur in the annotated
  │ type:
   ╭─[Main.nash:1:17]
 1 │ value : (Equal 'name) => Int
   ·                 ────
 2 │ value = 1
   ╰────
  help: Use the variable in the type, or remove the constraint that mentions it.
