crates/nash-report/src/snapshots/nash_report__canonicalize__coverage__variant_contradictory_representation.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"Main.nash\")"
---
  × The representation requirements on 'a are incompatible:
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
 2 │ other = name
   ╰────
  help: Change the incompatible constraints or uses of this variable.
